objects/agf__Release_Signoff_Infrastructure__c.object
<CustomObject>
    <description>Tracks approvals for Infrastructure projects.</description>
    <fields>
        <fullName>agf__CCE_and_Operations_Signoff__c</fullName>
        <label>CCE and Operations Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__CCE_and_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCE and Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureizfZ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Capacity_Approver_Signoff__c</fullName>
        <label>Capacity Approver Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Capacity_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Capacity Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_Infrastructure1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Chatter_Now_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chatter Now Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureHAWI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Chatter_Now_Signoff__c</fullName>
        <label>Chatter Now Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Dev_Mgr_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dev Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_Infrastructure3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Dev_Mgr_Signoff__c</fullName>
        <label>Dev Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Dev_VP_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dev Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureHCXr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Dev_VP_Signoff__c</fullName>
        <label>Dev Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Development_Engineering_Signoff__c</fullName>
        <label>Engineering Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Development_Engineering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engineering</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureHDeA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__FFX_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FFX Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_Infrastructure8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__FFX_Signoff__c</fullName>
        <label>FFX Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__HBase_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HBase Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_Infrastructure8Dql</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__HBase_Signoff__c</fullName>
        <label>HBase Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Insights_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Insights Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_Infrastructure8Dqv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Insights_Signoff__c</fullName>
        <label>Insights Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__LiveAgent_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LiveAgent Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureHAW8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__LiveAgent_Signoff__c</fullName>
        <label>LiveAgent Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__M_M_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>M&amp;M Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_Infrastructure7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__M_M_Signoff__c</fullName>
        <label>M&amp;M Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__OSC_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SR Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_Infrastructure4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__OSC_Exec_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SR Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureHCYu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__OSC_Exec_Signoff__c</fullName>
        <label>SR Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__OSC_Signoff__c</fullName>
        <label>SR Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__PODSquad_PO_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PODOps PO Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_Infrastructure</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__PODSquad_PO_Signoff__c</fullName>
        <label>PODOps PO Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__QE_Mgr_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QE Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_Infrastructure2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__QE_Mgr_Signoff__c</fullName>
        <label>QE Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__QE_VP_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QE Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureHCY1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__QE_VP_Signoff__c</fullName>
        <label>QE Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Release_Approved__c</fullName>
        <label>Release Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Release_Management_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RM Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_Infrastructure6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Release_Management_Exec_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RM Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureHCYk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Release_Management_Exec_Signoff__c</fullName>
        <label>RM Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Release_Management_Signoff__c</fullName>
        <label>RM Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Sandbox_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sandbox Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_Infrastructure9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Sandbox_Signoff__c</fullName>
        <label>Sandbox Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Signoff_Date__c</fullName>
        <label>Scheduled Signoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Search_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Search Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureHAVo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Search_Signoff__c</fullName>
        <label>Search Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Service_Delivery_TechOps_Signoff__c</fullName>
        <label>Infrastructure Engineering Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Service_Delivery_Technical_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infrastructure Engineering</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureHDdq</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Sites_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sites Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureHAVy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Sites_Signoff__c</fullName>
        <label>Sites Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Staggered_Release__c</fullName>
        <label>Staggered Release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GUS</fullName>
                </value>
                <value>
                    <fullName>SB</fullName>
                </value>
                <value>
                    <fullName>R0</fullName>
                </value>
                <value>
                    <fullName>R1</fullName>
                </value>
                <value>
                    <fullName>R2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__TBR_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TCR Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_Infrastructure5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__TBR_Signoff__c</fullName>
        <label>TCR Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__TechOps_Eng_VP_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TechOps Eng Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureHCYB</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__TechOps_Eng_VP_Signoff__c</fullName>
        <label>TechOps Eng Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__TechOps_Operations_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TechOps Operations Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureHCZ4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__TechOps_Operations_Signoff__c</fullName>
        <label>TechOps Operations Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Technology_Exec_Signoff__c</fullName>
        <label>Chief Infrastructure Officer Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Technology_Exec__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Chief Infrastructure Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureHDdg</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Technology_Products_Operations_Signoff__c</fullName>
        <label>Technology &amp; Products Operations Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Technology_Products_Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technology &amp; Products Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Release_Signoffs_InfrastructureHDe0</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Release Signoff Infrastructure</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Release Signoff Infrastructure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Release Signoffs Infrastructure</pluralLabel>
    <recordTypes>
        <fullName>agf__New_Pods</fullName>
        <active>true</active>
        <description>Tracks approvals for new POD buildouts</description>
        <label>New Pods</label>
    </recordTypes>
    <recordTypes>
        <fullName>agf__Splits_Migrations</fullName>
        <active>true</active>
        <description>Tracks approvals for POD migrations and splits</description>
        <label>Splits &amp; Migrations</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__Dates_must_not_be_future</fullName>
        <active>true</active>
        <errorConditionFormula>OR ( agf__Release_Approved__c &gt; TODAY(),
agf__Chatter_Now_Signoff__c  &gt; TODAY(),
  agf__Dev_Mgr_Signoff__c  &gt; TODAY(),
 agf__Dev_VP_Signoff__c  &gt; TODAY(),
agf__Development_Engineering_Signoff__c &gt; TODAY(),
 agf__FFX_Signoff__c  &gt; TODAY(),
 agf__LiveAgent_Signoff__c &gt; TODAY(),
 agf__M_M_Signoff__c &gt; TODAY(),
 agf__OSC_Signoff__c &gt; TODAY(),
 agf__OSC_Exec_Signoff__c &gt; TODAY(),
 agf__PODSquad_PO_Signoff__c &gt; TODAY(),
 agf__QE_Mgr_Signoff__c &gt; TODAY(),
 agf__QE_VP_Signoff__c &gt; TODAY(),
 agf__Release_Management_Signoff__c &gt; TODAY(),
 agf__Release_Management_Exec_Signoff__c &gt; TODAY(),
 agf__Sandbox_Signoff__c &gt; TODAY(),
 agf__Search_Signoff__c &gt; TODAY(),
 agf__Sites_Signoff__c &gt; TODAY(),
 agf__Service_Delivery_TechOps_Signoff__c   &gt; TODAY(),
 agf__TBR_Signoff__c &gt; TODAY(),
 agf__Technology_Exec_Signoff__c &gt; TODAY(),
 agf__Technology_Products_Operations_Signoff__c &gt; TODAY(),
 agf__TechOps_Eng_VP_Signoff__c &gt; TODAY(),
 agf__TechOps_Operations_Signoff__c &gt; TODAY())</errorConditionFormula>
        <errorMessage>Signoff dates cannot be in the future.</errorMessage>
    </validationRules>
</CustomObject>